--- a/IS362_Project4.ipynb
+++ b/IS362_Project4.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1><center>Assignment – Preprocessing Data for scikit-learn</center></h1> \n",
+    "### Assignment project 4 – Preprocessing Data for scikit-learn\n",
     " \n",
     "![Project_4_Picture1.jpg](attachment:Project_4_Picture1.jpg)\n",
     "  \n",
